# E-Health-Platform

backend-fastapi/: .env  auth.py  db.py  main.py  models.py  pyproject.toml  security.py
backend-fastapi/routes/: admin.py  appointments.py  hospitals.py  login.py  prescriptions.py  register.py  users.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: doctorDashboard.tsx  hospitalAdmin.tsx  login.tsx  patientDashboard.tsx  register.tsx
